# workspace_multiple_uv_versions

./: autotest_config.json  pyproject.toml
service-a/: README.md  pyproject.toml
service-b/: README.md  pyproject.toml
service-c/: README.md
