[project]
name = "workspace-multiple-uv-versions"
version = "1.0.0"
description = "Test: Workspace with services using different UV version features"
requires-python = ">=3.10"
readme = "README.md"

# Minimal root dependencies
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    # Development tools compatible across UV versions
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.uv.sources]
service-a-legacy = { workspace = true }
service-b-modern = { workspace = true }
service-c-latest = { workspace = true }

